--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="logo">Republic Polytechnic</div>
 
-  <a href="volunteer.html" class="volunteer-btn">Volunteer!</a>
+  <a href="volunteer\volunteer.html" class="volunteer-btn">Volunteer!</a>
 </header>
 
       <div class="hero-text" data-animate>
